@@ -137,12 +137,14 @@ SHLIB_OPENMP_FCFLAGS = @SHLIB_OPENMP_FFLAGS@
 ## for linking to libR.a
 STATIC_LIBR = @WANT_R_STATIC_TRUE@ @STATICR1@ "$(R_HOME)/lib$(R_ARCH)/libR.a" @STATICR2@ $(BLAS_LIBS) $(FLIBS) @R_XTRA_LIBS@ $(LIBINTL) @READLINE_LIBS@ $(LIBS)
 
+## used on AIX
 R_XTRA_CFLAGS = @R_XTRA_CFLAGS@
+## used on HP-UX
 R_XTRA_CPPFLAGS = @R_XTRA_CPPFLAGS@ @R_XTRA_CPPFLAGS2@ -DNDEBUG
+## currently unused
 R_XTRA_CXXFLAGS = @R_XTRA_CXXFLAGS@
-R_XTRA_FFLAGS = @R_XTRA_FFLAGS@
-
-## SHLIB_CFLAGS SHLIB_CXXFLAGS SHLIB_FFLAGS are apparently currently unused
+## currently unused
+R_XTRA_FFLAGS = @R_XTRA_FFLAGS@## SHLIB_CFLAGS SHLIB_CXXFLAGS SHLIB_FFLAGS are apparently currently unused
 ## SHLIB_CXXFLAGS is undocumented,  there is no SHLIB_FCFLAGS
 ALL_CFLAGS = $(R_XTRA_CFLAGS) $(PKG_CFLAGS) $(CPICFLAGS) $(SHLIB_CFLAGS) $(CFLAGS)
 ALL_CPPFLAGS = $(R_XTRA_CPPFLAGS) $(PKG_CPPFLAGS) $(CLINK_CPPFLAGS) $(CPPFLAGS)
@@ -150,6 +152,7 @@ ALL_CXXFLAGS = $(R_XTRA_CXXFLAGS) $(PKG_CXXFLAGS) $(CXXPICFLAGS) $(SHLIB_CXXFLAG
 ALL_OBJCFLAGS = $(PKG_OBJCFLAGS) $(CPICFLAGS) $(SHLIB_CFLAGS) $(OBJCFLAGS)
 ALL_OBJCXXFLAGS = $(PKG_OBJCXXFLAGS) $(CXXPICFLAGS) $(SHLIB_CXXFLAGS) $(OBJCXXFLAGS)
 ALL_FFLAGS = $(R_XTRA_FFLAGS) $(PKG_FFLAGS) $(FPICFLAGS) $(SHLIB_FFLAGS) $(FFLAGS)
+ALL_FCFLAGS = $(R_XTRA_FFLAGS) $(PKG_FCFLAGS) $(FPICFLAGS) $(SHLIB_FFLAGS) $(FCFLAGS)
 ## LIBR here as a couple of packages use this without SHLIB_LINK
 ALL_LIBS = $(PKG_LIBS) $(SHLIB_LIBADD) $(LIBR)@DYLIB_UNDEFINED_ALLOWED_FALSE@ $(LIBINTL)
 
@@ -167,6 +170,6 @@ ALL_LIBS = $(PKG_LIBS) $(SHLIB_LIBADD) $(LIBR)@DYLIB_UNDEFINED_ALLOWED_FALSE@ $(
 	$(FC) $(ALL_FFLAGS) -c $< -o $@
 ## @FCFLAGS_f9x@ are flags needed to recognise the extensions
 .f95.o:
-	$(FC) $(PKG_FCFLAGS) $(FPICFLAGS) $(FCFLAGS) -c @FCFLAGS_f95@ $< -o $@
+	$(FC) $(ALL_FCFLAGS) -c @FCFLAGS_f95@ $< -o $@
 .f90.o:
-	$(FC) $(PKG_FCFLAGS) $(FPICFLAGS) $(FCFLAGS) -c @FCFLAGS_f90@ $< -o $@
+	$(FC) $(ALL_FCFLAGS) -c @FCFLAGS_f90@ $< -o $@
